# qrcode_sdk

./: .gitignore  .gitmodules  CMakeLists.txt  demo.py  install.sh  readme.md
docker/: DockerFile.base
src/: CMakeCache.txt  Makefile  QRCode.cpp  cmake_install.cmake  opencv.hpp
